--- a/weather_app/src/pages/CurrentWeather/CurrentWeather.css
+++ b/weather_app/src/pages/CurrentWeather/CurrentWeather.css
@@ -1,14 +1,27 @@
 .Icon{
-    width: 10vw;
-    height: 10vw;
+    width: 6vw;
+    height: 5vw;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0 auto;
+    padding: 1vw;
 }
 
 .Current-weather{
-    padding: 3vw;
-    width: 50vw;
-    height: 30vw;
+    background-color: RGBA(255, 255, 255, 0.75);
+    width: 50%;
+    height: auto;
     margin: 0 auto;
+    padding: 4vw;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.Header-weather{
+    font-size: calc(2vw + 30% );
+  }
+  
+.Temp{
+    font-size: calc(4vw + 60%);
+    padding: 1vw;
+    color: darkcyan;
 }
