weather app styling

--- a/weather_app/src/pages/CurrentWeather/CurrentWeather.css
+++ b/weather_app/src/pages/CurrentWeather/CurrentWeather.css
@@ -1,27 +1,33 @@
 .Icon{
-    width: 6vw;
-    height: 5vw;
+    width: 12vw;
+    height: 8vw;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0 auto;
-    padding: 1vw;
+    padding-top: 1vw;
 }
 
 .Current-weather{
-    background-color: RGBA(255, 255, 255, 0.75);
+    background-color: RGBA(255, 255, 255, 0.1);
+    color: #fff;
     width: 50%;
     height: auto;
     margin: 0 auto;
-    padding: 4vw;
+    padding: 2vw 4vw;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-.Header-weather{
-    font-size: calc(2vw + 30% );
-  }
+.Current-weather .Header{
+    font-size: calc(1vw + 30% );
+    color: #fff;
+    padding: 0.5vw;
+}
+
+.Current-weather .Weather{
+    padding-top: 1vw;
+}
   
 .Temp{
     font-size: calc(4vw + 60%);
-    padding: 1vw;
     color: darkcyan;
 }
