--- a/weather_app/src/App.css
+++ b/weather_app/src/App.css
@@ -12,6 +12,15 @@ nav, main {
 nav {
   display: grid;
   align-items: center;
+  padding: 2vw 1vw 2vw 3vw;
+}
+
+nav ul{
+  align-self: flex-start;
+}
+
+nav header{
+  align-self: flex-end;
 }
 
 main {
@@ -49,6 +58,14 @@ a {
 h1, h2, h3, h5, h6{
   margin-block-start: 0 !important;
   margin-block-end: 0 !important;
+}
+
+p{
+  font-size: calc(0.2vw + 40%);
+}
+
+.active{
+  text-decoration: underline #fff;
 }
 
 .App-header {
