Autocomplete using external API

--- a/weather_app/src/App.css
+++ b/weather_app/src/App.css
@@ -79,14 +79,6 @@ p{
   font-size: calc(1vw + 50%);
 }
 
-.hide{
-  display: none !important;
-}
-
-.show{
-  display: block !important;
-}
-
 .Grid-container{
   display: grid;
 }
@@ -122,10 +114,17 @@ p{
 
 }
 
-.App.Rain{
+.App.Rain, {
   background: #2C3E50;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #4CA1AF, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #4CA1AF, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.App.Drizzle{
+  background: #4CA1AF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
