--- a/weather_app/src/pages/Forecast/Forecast.css
+++ b/weather_app/src/pages/Forecast/Forecast.css
@@ -3,3 +3,19 @@
     grid-template-columns: repeat(5, 1fr);
     width: 100%;
 }
+
+.Forecast-container{
+    margin: 0 1vw;
+}
+
+@media screen and (max-width: 900px){
+    .Forecast-container{
+        margin: 0;
+    }
+
+    .Forecast{
+        padding: 2vw 4vw 4vw 4vw;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2vw;
+    }
+}
