--- a/weather_app/src/pages/Forecast/SingleForecast.css
+++ b/weather_app/src/pages/Forecast/SingleForecast.css
@@ -2,7 +2,7 @@
 .Single-forecast{
     display: grid;
     width: 90%;
-    height: 100%;;
+    height: 100%;
 }
 
 .Single-forecast .Header-weather {
@@ -19,13 +19,16 @@
     padding: 1.5vw;
 }
 
+@media screen and (max-width: 900px){
+    .Single-forecast.Current-weather{ 
+        margin: 0;
+        width: 100%;
+    }
+}
+
 .Single-forecast .Icon{
     width: 8vw;
     height: 7vw;
-}
-
-.Single-forecast .Weather{
-    font-size: calc(1vw + 20% );
 }
 
 .Single-forecast .Wind{
@@ -36,3 +39,4 @@
     padding: 0.5vw;
     font-size: calc(0.7vw + 30%);
 }
+
