--- a/6._NewAuth/quizdom/src/App.css
+++ b/6._NewAuth/quizdom/src/App.css
@@ -1,18 +1,69 @@
 *{
   margin: 0;
   padding: 0;
-  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-  width: 100vw;
+/* ########################### BASIC HTML ELEMENTS */
+
+.App{
+  width: 100%;
+  min-height: 100vh;
 }
 
-.App {
+main{
+  display: grid;
+  min-height: 100vh;
+}
+
+footer{
   text-align: center;
 }
 
+nav{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+nav ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: flex-end;
+  justify-items: center;
+}
+
+input{
+  width: 100%;
+  margin: 0.8rem 0;
+  padding: 1rem;
+}
+
+button{
+  width: 100%;
+  margin: 0.8rem 0;
+  padding: 1rem;
+  border: 0.1px solid lightgray;
+}
+
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+}
+
+a.active{
+  color: red;
+}
+
+/* ########################### FONTS AND HEADERS */
+
 h2{
   font-size: 1rem;
+}
+
+.App-header{
 }
 
